--- a/src/PeruShopHub.Web/src/app/pages/purchase-orders/purchase-orders-list.component.scss
+++ b/src/PeruShopHub.Web/src/app/pages/purchase-orders/purchase-orders-list.component.scss
@@ -1,6 +1,11 @@
 @use '../../../styles/mixins' as m;
 
 .po-list {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+
   &__action-bar {
     display: flex;
     align-items: center;
